operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-enterprise
  name: redis-enterprise-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-enterprise-operator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis-enterprise
        name: redis-enterprise-operator
    spec:
      containers:
        - command:
            - operator-root
            - operator
          image: redislabs/operator:8.2.0-18
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /liveness
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            exec:
              command: ["true"]
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 5
            initialDelaySeconds: 0
          name: redis-enterprise-operator
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 4000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
        - command:
            - operator-root
            - admission
          image: redislabs/operator:8.2.0-18
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /liveness
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: admission
          ports:
            - containerPort: 8443
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readiness
              port: 8443
              scheme: HTTPS
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      serviceAccountName: redis-enterprise-operator
