operator_rhel.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redis-enterprise-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-enterprise-operator
  template:
    metadata:
      labels:
        name: redis-enterprise-operator
    spec:
      serviceAccount: redis-enterprise-operator
      containers:
        - name: redis-enterprise-operator
          image: redislabs/operator:780_eab22a45.rhel7
          securityContext:
            runAsUser: 1001
          command:
          - redis-enterprise-operator
          imagePullPolicy: Always
