admission.bundle.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admission
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: redb-admission
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-deploy
spec:
  selector:
    matchLabels:
      app: redb-admission
  template:
    metadata:
      labels:
        app: redb-admission
    spec:
      serviceAccountName: redis-enterprise-admission
      containers:
      - name: admin
        image: redislabs/operator:6.0.20-4
        command:
        - /usr/local/bin/admission
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        readinessProbe:
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 30
          timeoutSeconds: 10
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
---
