admission.openshift.bundle.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admission
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: redb-admission
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-deploy
spec:
  selector:
    matchLabels:
      app: redb-admission
  template:
    metadata:
      labels:
        app: redb-admission
    spec:
      serviceAccountName: redis-enterprise-admission
      containers:
      - name: admin
        image: redislabs/operator-internal:6.0.6-6.rhel7
        command:
        - /usr/local/bin/admission
        args:
        - '-v=0'
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 25m
            memory: 256Mi
        readinessProbe:
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 30
          timeoutSeconds: 10
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: redb-admission
webhooks:
- name: redb.admission.redislabs
  failurePolicy: Fail
  rules:
  - apiGroups:   ["app.redislabs.com"]
    apiVersions: ["v1alpha1"]
    operations:  ["*"]
    resources:   ["redisenterprisedatabases"]
  clientConfig:
    service:
      namespace: NAMESPACE_OF_SERVICE_ACCOUNT
      name: admission
      path: /admission
    caBundle: "" # Fill in with BASE64 encoded signed cert
  admissionReviewVersions: ["v1beta1"]
---
